5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1575_1326.log
== TEST (2019-03-12 11:44:53) 
-- CODE:
printt("40"+"35")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printt("40"+"35")
NameError: name 'printt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:58) 
-- CODE:
print("40"+"35")
-- OUTPUT:
4035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:17) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:45:22) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.127689
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
